finished cell forms and question layout

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
 
-    <div class="container">
+    <div class="container-fluid">
   <div class="row">
     <div class="col-xs-4">
       <div class="leftDiv">
@@ -70,7 +70,7 @@
           <em>Fifth Edition</em>
         </h1>
         <h2>
-          SUMMARY OF PATIENTS RATING SCALE
+          SUMMARY OF PATIENTS RATING<br> SCALE
         </h2>
         <ul id="ratingScale">
           <li>
@@ -94,29 +94,184 @@
     <!-- end col-xs-4 rightDiv -->
   </div>
   <!-- end row -->
+  <div class="rowLine"></div>
   <div class="row">
     <div class="col-xs-4">
       <div class="leftDiv">
         <div id="generalInfoLeft">
           <ul class="questionList">
             <li>
-              <p>G1. I.D Number<p>
+              <p>G1. I.D NUMBER<p>
               <table>
                 <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                  <td class="formCell"></td>
+                  <td class="formCell"></td>
+                  <td class="formCell"></td>
+                  <td class="formCell"></td>
                 </tr>
               </table>
             </li>
+            <li>
+              <p>G2. LAST 4 DIGITS<br> OF SSN</p>
+              <table>
+                <tr>
+                  <td class="formCell"></td>
+                  <td class="formCell"></td>
+                  <td class="formCell"></td>
+                  <td class="formCell"></td>
+                </tr>
+              </table>
+            </li>
+            <li>
+              <p>G3. PROGRAM NUMBER</p>
+              <table>
+                <tr>
+                  <td class="formCell"></td>
+                  <td class="formCell"></td>
+                  <td class="formCell"></td>
+                </tr>
+              </table>
+            </li>
+            <li>
+              <p>G4. DATE OF<br>ADMISSION</p>
+              <table>
+                <tr>
+                  <td>
+                    <table>
+                      <tr>
+                        <td class="formCell"></td>
+                        <td class="formCell"></td>
+                      </tr>
+                    </table>
+                    <h4>Mth.</h4>
+                  </td>
+                  <td>
+                    <table>
+                      <tr>
+                        <td class="formCell"></td>
+                        <td class="formCell"></td>
+                      </tr>
+                    </table>
+                    <h4>Day</h4>
+                  </td>
+                  <td>
+                    <table>
+                      <tr>
+                        <td class="formCell"></td>
+                        <td class="formCell"></td>
+                      </tr>
+                    </table>
+                    <h4>Year</h4>
+                  </td>
+                </tr>
+              </table>
+            </li>
+            <li>
+              <p>G5. DATE OF<br>INTERVIEW</p>
+              <table>
+                <tr>
+                  <td>
+                    <table>
+                      <tr>
+                        <td class="formCell"></td>
+                        <td class="formCell"></td>
+                      </tr>
+                    </table>
+                    <h4>Mth.</h4>
+                  </td>
+                  <td>
+                    <table>
+                      <tr>
+                        <td class="formCell"></td>
+                        <td class="formCell"></td>
+                      </tr>
+                    </table>
+                    <h4>Day</h4>
+                  </td>
+                  <td>
+                    <table>
+                      <tr>
+                        <td class="formCell"></td>
+                        <td class="formCell"></td>
+                      </tr>
+                    </table>
+                    <h4>Year</h4>
+                  </td>
+                </tr>
+              </table>
+            </li>
+            <li>
+              <p>G6. TIME BEGUN</p>
+              <table>
+                <tr>
+                  <td>
+                    <table>
+                      <tr>
+                        <td class="formCell"></td>
+                        <td class="formCell"></td>
+                      </tr>
+                    </table>
+                  </td>
+                  <td><p><b>:</b></p></td>
+                  <td>
+                    <table>
+                      <tr>
+                        <td class="formCell"></td>
+                        <td class="formCell"></td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+            </li>
+            <li>
+              <p>G6. TIME ENDED</p>
+              <table>
+                <tr>
+                  <td>
+                    <table>
+                      <tr>
+                        <td class="formCell"></td>
+                        <td class="formCell"></td>
+                      </tr>
+                    </table>
+                  </td>
+                  <td><p><b>:</b></p></td>
+                  <td>
+                    <table>
+                      <tr>
+                        <td class="formCell"></td>
+                        <td class="formCell"></td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+            </li>
+            <li>
+              <p>G8. CLASS:</p>
+              <table>
+                <tr>
+                  <td class="formCell"></td>
+                </tr>
+              </table>
+              <ul class="smallList">
+                <li><p>1 - Intake</p></li>
+                <li><p>2 - Follow-up</p></li>
+              </ul>
+            </li>
           </ul>
+          <!-- end questionList -->
         </div>
+        <!-- end generalInfoLeft -->
       </div>
+      <!-- end leftDiv -->
     </div>
     <div class="col-xs-4"></div>
     <div class="col-xs-4"></div>
   </div>
+  <!-- end row -->
+  <div class="rowLine"></div>
 </div>
 <!-- end container -->
     
