--- a/index.html
+++ b/index.html
@@ -333,20 +333,366 @@
     <div class="col-xs-4 centralDiv sameHeight">
       <h2 style="margin: 0px">GENERAL INFORMATION</h2>
       <br>
+      <table>
+        <tr>
+          <td width="2%"><p>NAME</p></td>
+          <td><div class="formInputLine">name</div></td>
+        </tr>
+      </table>
+      <table>
+        <tr>
+          <td width="2%"><p>CURRENT&nbsp;</p></td>
+          <td width="2%"><p>ADDRESS</p></td>
+          <td><div class="formInputLine"></div></td>
+        </tr>
+      </table>
+      <table width="100%">
+        <tr>
+          <td><div class="formInputLine"></div></td>
+        </tr>
+      </table>
+      <table width="100%">
+        <tr>
+          <td><div class="formInputLine"></div></td>
+        </tr>
+      </table>
+      <br>
       <ul class="questionList">
         <li>
-          <p>NAME</p>
-          <div class="formInputLine" style="width: 70%">name</div>
+          <p>G13. GEOGRAPHIC CODE</p>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
         </li>
         <li>
-          <p>CURRENT ADDRESS</p>
-          <div class="formInputLine" style="width: 50%"></div>
+          <p>G14. How long have you</p><br>
+          <p style="margin-left: 40px">lived at this address?</p>
+          <table>
+            <tr>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr> 
+                </table>
+                <h4>Years</h4>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+                <h4>Months</h4>
+              </td>
+            </tr>
+          </table>
+        </li>
+        <li>
+          <p>G15. Is this residence owned</p><br>
+          <p style="margin-left: 40px">by you or your family?</p>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+        </li>
+        <li>
+          <p>G16. DATE OF</p><br>
+          <p style="margin-left: 40px">BIRTH</p>
+          <table>
+            <tr>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr> 
+                </table>
+                <h4>Mth.</h4>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+                <h4>Day</h4>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+                <h4>Year</h4>
+              </td>
+            </tr>
+          </table>
+        </li>
+        <li>
+          <p>G17. RACE</p>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <ul class="smallList">
+            <li><p>1 - White (Not of Hispanic Origin)</p></li>
+            <li><p>2 - Black (Not of Hispanic Origin)</p></li>
+            <li><p>3 - American Indian</p></li>
+            <li><p>4 - Alaskan Native</p></li>
+            <li><p>5 - Asian or Pacific Islander</p></li>
+            <li><p>6 - Hispanic - Mexican</p></li>
+            <li><p>7 - Hispanic - Puerto Rican</p></li>
+            <li><p>8 - Hispanic - Cuban</p></li>
+            <li><p>9 - Other Hispanic</p></li>
+          </ul>
+        </li>
+        <li>
+          <p>G18. RELIGIOUS PREFERENCE</p>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <ul class="smallList">
+            <li><p>1 - Protestant</p></li>
+            <li><p>2 - Catholic</p></li>
+            <li><p>3 - Jewish</p></li>
+            <li><p>4 - Islamic</p></li>
+            <li><p>5 - Other</p></li>
+            <li><p>6 - None</p></li>
+          </ul>
+        </li>
+        <li>
+          <p><u>G19.</u> Have you been in a controlled</p><br>
+          <p style="margin-left: 40px">environment in the past 30 days?</p>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <ul class="smallList">
+            <li><p>1 - No</p></li>
+            <li><p>2 - Jail</p></li>
+            <li><p>3 - Alcohol or Drug Treatment</p></li>
+            <li><p>4 - Medical Treatment</p></li>
+            <li><p>5 - Psychiatric Treatment</p></li>
+            <li><p>6 - Other</p></li>
+          </ul>
+        </li>
+        <li>
+          <p><u>G20.</u> How many days? </p>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
         </li>
       </ul>
     </div>
     <!-- end centralDiv -->
     <div class="col-xs-4 rightDiv sameHeight">
       <h2 style="margin: 0px">ADDITIONAL TEST RESULTS</h2>
+      <br>
+      <ul class="questionList">
+        <li>
+          <p>G21. Shipley C.Q.</p>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+        </li>
+        <li>
+          <p>G22. Shipley I.Q.</p>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+        </li>
+        <li>
+          <p>G23. Beck Total Score</p>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+        </li>
+        <li>
+          <p>G24. SCL-90 Total</p>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+        </li>
+        <li>
+          <p>G25. MAST</p>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+        </li>
+        <li>
+          <p>G26.</p>
+          <div class='formInputLine' style="width: 70%"></div>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+        </li>
+        <li>
+          <p>G27.</p>
+          <div class='formInputLine' style="width: 70%"></div>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+        </li>
+        <li>
+          <p>G28.</p>
+          <div class='formInputLine' style="width: 70%"></div>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+        </li>
+      </ul>
+      <br>
+      <h2>SEVERITY PROFILE</h2>
+      <br>
+      <table id="severityTable">
+        <tr id="topBold">
+          <td><p><b>9</b></p></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+        </tr>
+        <tr>
+          <td><p><b>8</b></p></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+        </tr>
+        <tr>
+          <td><p><b>7</b></p></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+        </tr>
+        <tr>
+          <td><p><b>6</b></p></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+        </tr>
+        <tr>
+          <td><p><b>5</b></p></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+        </tr>
+        <tr>
+          <td><p><b>4</b></p></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+        </tr>
+        <tr>
+          <td><p><b>3</b></p></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+        </tr>
+        <tr>
+          <td><p><b>1</b></p></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+        </tr>
+        <tr id="bottomBold">
+          <td><p><b>0</b></p></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+          <td class="formSeverity"></td>
+        </tr>
+        <tr id="vertical">
+          <td><p><b>Problems</b></p></td>
+          <td><p>Medical</p></td>
+          <td><p>Employ/Support</p></td>
+          <td><p>Alcohol</p></td>
+          <td><p>Drug</p></td>
+          <td><p>Legal</p></td>
+          <td><p>Family/Social</p></td>
+          <td><p>Psychiatric</p></td>
+        </tr>
+      </table>
     </div>
     <!-- end rightDiv -->
   </div>
