finished medical status

--- a/index.html
+++ b/index.html
@@ -98,77 +98,74 @@
       <div id="generalInfoLeft">
         <ul class="questionList">
           <li>
-            <p>G1. I.D NUMBER
-              <p>
-                <table>
-                  <tr>
-                    <td class="formCell">1</td>
-                    <td class="formCell">2</td>
-                    <td class="formCell">3</td>
-                    <td class="formCell">4</td>
-                  </tr>
-                </table>
+            <table>
+              <tr>
+                <td class="formCell">1</td>
+                <td class="formCell">2</td>
+                <td class="formCell">3</td>
+                <td class="formCell">4</td>
+              </tr>
+            </table>
+            <p>G1. I.D NUMBER</p>
           </li>
           <li>
+            <table>
+              <tr>
+                <td class="formCell"></td>
+                <td class="formCell"></td>
+                <td class="formCell"></td>
+                <td class="formCell"></td>
+              </tr>
+            </table>
             <p>G2. LAST 4 DIGITS</p><br>
             <p style="padding-left: 30px">OF SSN</p>
+          </li>
+          <li>
             <table>
               <tr>
                 <td class="formCell"></td>
                 <td class="formCell"></td>
                 <td class="formCell"></td>
-                <td class="formCell"></td>
               </tr>
             </table>
-          </li>
-          <li>
             <p>G3. PROGRAM NUMBER</p>
-            <table>
-              <tr>
-                <td class="formCell"></td>
-                <td class="formCell"></td>
-                <td class="formCell"></td>
-              </tr>
-            </table>
           </li>
           <li>
+            <table>
+              <tr>
+                <td>
+                  <table>
+                    <tr>
+                      <td class="formCell"></td>
+                      <td class="formCell"></td>
+                    </tr>
+                  </table>
+                  <h4>Mth.</h4>
+                </td>
+                <td>
+                  <table>
+                    <tr>
+                      <td class="formCell"></td>
+                      <td class="formCell"></td>
+                    </tr>
+                  </table>
+                  <h4>Day</h4>
+                </td>
+                <td>
+                  <table>
+                    <tr>
+                      <td class="formCell"></td>
+                      <td class="formCell"></td>
+                    </tr>
+                  </table>
+                  <h4>Year</h4>
+                </td>
+              </tr>
+            </table>
             <p>G4. DATE OF</p><br>
             <p style="padding-left: 30px">ADMISSION</p>
-            <table>
-              <tr>
-                <td>
-                  <table>
-                    <tr>
-                      <td class="formCell"></td>
-                      <td class="formCell"></td>
-                    </tr>
-                  </table>
-                  <h4>Mth.</h4>
-                </td>
-                <td>
-                  <table>
-                    <tr>
-                      <td class="formCell"></td>
-                      <td class="formCell"></td>
-                    </tr>
-                  </table>
-                  <h4>Day</h4>
-                </td>
-                <td>
-                  <table>
-                    <tr>
-                      <td class="formCell"></td>
-                      <td class="formCell"></td>
-                    </tr>
-                  </table>
-                  <h4>Year</h4>
-                </td>
-              </tr>
-            </table>
           </li>
           <li>
-            <p>G5. DATE OF</p><br>
-            <p style="padding-left: 30px">INTERVIEW</p>
             <table>
               <tr>
                 <td>
@@ -200,6 +197,8 @@
                 </td>
               </tr>
             </table>
+            <p>G5. DATE OF</p><br>
+            <p style="padding-left: 30px">INTERVIEW</p>
           </li>
           <li>
             <p>G6. TIME BEGUN</p>
@@ -302,14 +301,14 @@
             </ul>
           </li>
           <li>
-            <p>G11. INTERVIEWER</p><br>
-            <p style="padding-left: 40px">CODE NUMBER</p>
             <table>
               <tr>
                 <td class="formCell"></td>
                 <td class="formCell"></td>
               </tr>
             </table>
+            <p>G11. INTERVIEWER</p><br>
+            <p style="padding-left: 40px">CODE NUMBER</p>
           </li>
           <li>
             <p>G12. SPECIAL:</p>
@@ -369,8 +368,6 @@
           </table>
         </li>
         <li>
-          <p>G14. How long have you</p><br>
-          <p style="margin-left: 40px">lived at this address?</p>
           <table>
             <tr>
               <td>
@@ -393,19 +390,19 @@
               </td>
             </tr>
           </table>
+          <p>G14. How long have you</p><br>
+          <p style="margin-left: 40px">lived at this address?</p>
         </li>
         <li>
-          <p>G15. Is this residence owned</p><br>
-          <p style="margin-left: 40px">by you or your family?</p>
           <table>
             <tr>
               <td class="formCell"></td>
             </tr>
           </table>
+          <p>G15. Is this residence owned</p><br>
+          <p style="margin-left: 40px">by you or your family?</p>
         </li>
         <li>
-          <p>G16. DATE OF</p><br>
-          <p style="margin-left: 40px">BIRTH</p>
           <table>
             <tr>
               <td>
@@ -437,6 +434,8 @@
               </td>
             </tr>
           </table>
+          <p>G16. DATE OF</p><br>
+          <p style="margin-left: 40px">BIRTH</p>
         </li>
         <li>
           <p>G17. RACE</p>
@@ -474,13 +473,13 @@
           </ul>
         </li>
         <li>
-          <p><u>G19.</u> Have you been in a controlled</p><br>
-          <p style="margin-left: 40px">environment in the past 30 days?</p>
           <table>
             <tr>
               <td class="formCell"></td>
             </tr>
           </table>
+          <p><u>G19.</u> Have you been in a controlled</p><br>
+          <p style="margin-left: 40px">environment in the past 30 days?</p>
           <ul class="smallList">
             <li><p>1 - No</p></li>
             <li><p>2 - Jail</p></li>
@@ -698,6 +697,183 @@
   </div>
   <!-- end row -->
   <div class="rowLine"></div>
+  <div class="row">
+    <div class="col-xs-2">
+      <table style="margin-top: 10px; margin-left: 10px">
+        <tr>
+          <td class="formCell"></td>
+          <td class="formCell"></td>
+          <td class="formCell"></td>
+          <td class="formCell"></td>
+        </tr>
+      </table>
+    </div>
+    <div class="col-xs-10">
+      <h1 style="margin-left: -20%">MEDICAL STATUS</h1>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row rowSameHeight">
+    <div class="col-xs-4 leftDiv sameHeight">
+      <ul class="questionList">
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>M1.</u> How many times in your life</p><br>
+          <p style="margin-left: 35px">have you been hospitalized for</p><br>
+          <p style="margin-left: 35px">medicalproblems?</p><br>
+          <p style="margin-left: 35px">(Include o.d.'s, d.t.'s exlude detox.)</p><br>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+                <h4>Years</h4>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+                <h4>Months</h4>
+              </td>
+            </tr>
+          </table>
+          <p>M2. How long ago was your</p><br>
+          <p style="margin-left: 35px">last hospitalization</p><br>
+          <p style="margin-left: 35px">for a physical problem?</p><br>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p>M3. Do you have any chronic medical</p><br>
+          <p style="margin-left: 35px">problems which continue to interfere</p><br>
+          <p style="margin-left: 35px">with your life?</p><br>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>M4.</u> Are you taking any prescribed</p><br>
+          <p style="margin-left: 35px">medication on a regular basis for a</p><br>
+          <p style="margin-left: 35px">physical problem? 0 - No 1 - Yes</p><br>
+        </li>
+      </ul>
+    </div>
+    <!-- end leftDiv -->
+    <div class="col-xs-4 centralDiv sameHeight">
+      <ul class="questionList">
+        <li>
+          <p><u>M5.</u> Do you receive a pension for a</p><br>
+          <p style="margin-left: 35px">physical disability? (Exclude</p><br>
+          <p style="margin-left: 35px">psychiatric disability.)</p><br>
+          <ul class="smallList">
+            <li><p>0 - No</p></li>
+            <li><p>1 - Yes&nbsp;</p><div class="formInputLine" style="width: 85%"></div></li>
+            <li><p style="margin-left: 50%">Specify</p></li>
+          </ul>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>M6.</u> How many days have you</p><br>
+          <p style="margin-left: 35px">experienced medical problems</p><br>
+          <p style="margin-left: 35px">in the past 30 days?</p>
+        </li>
+        <li>
+          <p><em>For questions M7 &amp; M8 please ask the patient to use the <b>Patient's Rating Scale</b>.</em></p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>M7.</u> How troubled or bothered have you</p><br>
+          <p style="margin-left: 35px">been by these medical problems</p><br>
+          <p style="margin-left: 35px">in the past 30 days?</p>
+        </li>
+      </ul>
+    </div>
+    <!-- end centralDiv -->
+    <div class="col-xs-4 rightDiv sameHeight">
+      <ul class="questionList">
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>M8.</u> How important to you now is</p><br>
+          <p style="margin-left: 35px">treatment for these medical problems?</p><br>
+        </li>
+        <li style="text-align: center">
+          <p><em><b>Interviewer Severity Rating</b></em></p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p>M9. How would you rate the patient's</p><br>
+          <p style="margin-left: 35px">need for medical treatment?</p><br>
+        </li>
+        <li style="text-align: center">
+          <p><em><b>Confidence Rating</b></em></p>
+        </li>
+        <li style="text-align: center">
+          <p>Is the above information significantly distorted by:</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>M10.</u> Patient's misrepresentation?</p><br>
+          <p style="margin-left: 100px">0 - No 1 - Yes</p><br>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>M8.</u> How important to you now is</p><br>
+          <p style="margin-left: 100px">0 - No 1 - Yes</p><br>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="rowLine"></div>
+  <div class="row">
+    <div class="col-xs-12">
+      <h1>EMPLOYMENT/SUPPORT STATUS</h1>
+    </div>
+  </div>
+  <!-- end row -->
 </div>
 <!-- end container -->
     
